--- a/src/templates/overall.html
+++ b/src/templates/overall.html
@@ -69,7 +69,17 @@
 
         <h2>Sources</h2>
 
-        <h3>Search Results</h3>
+        <h3>Reddit threads</h3>
+        <ul>
+        {% for thread_result in reddit_summary.summaries %}
+            <li>
+                <a href="https://www.reddit.com/{{thread_result.submission.permalink}}">{{ thread_result.submission.title }}</a><br/>
+            </li>
+        {% endfor %}
+        </ul>
+        <p>Note: We process fewer threads than the search results mainly to save OpenAI costs. Sometimes we also filter search results if there aren't enough comments, or if we detect significant hallucination in the LLM summary of the individual thread.</p>
+
+        <h3>Full search Results</h3>
         <ul>
         {% for source in reddit_summary.sources %}
             <li>
@@ -79,15 +89,6 @@
         {% endfor %}
         </ul>
 
-        <h3>Processed threads</h3>
-        <ul>
-        {% for thread_result in reddit_summary.summaries %}
-            <li>
-                <a href="https://www.reddit.com/{{thread_result.submission.permalink}}">{{ thread_result.submission.title }}</a><br/>
-            </li>
-        {% endfor %}
-        </ul>
-        <p>Note: We process fewer threads than the search results mainly to save OpenAI costs. Sometimes we also filter search results if there aren't enough comments, or if we detect significant hallucination in the LLM summary of the individual thread.</p>
 
         <h1>Summary of Glassdoor for {{reddit_summary.overall_summary.target.company}}</h1>
 
