--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,6 +14,10 @@
         li {
             margin-bottom: 10px;
         }
+
+        body {
+            background-color: #e0eaf1;
+        }
     </style>
 </head>
 
@@ -21,13 +25,17 @@
 
     <div class="container">
 
-
+        {% block body %}
         {{content}}
+        {% endblock %}
 
     </div>
 
     <!-- materialize css dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    {% block scripts %}
+    {% endblock %}
 
 </body>
 
