Adding general search results to HTML output

--- a/src/templates/basic_report.html
+++ b/src/templates/basic_report.html
@@ -27,6 +27,15 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+            <h1>General search results</h1>
+            {{general_search_summary}}
+        </div>
+    </div>
+</div>
+
 <!-- 
 
 The markdown, as a guide
