Company website backlink, footer link to CD

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -70,7 +70,7 @@
     <footer class="page-footer indigo darken-4">
         <div class="footer-copyright">
             <div class="container">
-                Company Detective beta
+                <a href="https://ktrnka.github.io/company-detective/">Company Detective</a> beta
 
                 <!-- Elements on the right -->
                 <span class="grey-text text-lighten-4 right">
