--- a/src/templates/basic_report.html
+++ b/src/templates/basic_report.html
@@ -5,7 +5,14 @@
 <div class="row">
     <div class="col s12">
         <div class="card-panel">
-            {{summary}}
+        {{summary}}
+
+        {%if result.target.domain %}
+        <hr/>
+        <div class="card-cta">
+            Visit the <a href="https://{{ result.target.domain }}">the company's website</a>.
+        </div>
+        {% endif %}
         </div>
     </div>
 </div>
