--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,7 @@
 <!-- The widget to find companies -->
 <div class="row">
     <div class="col s12">
-        <div class="card-panel">
+        <div id="search-panel" class="card-panel">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">search</i>
