Update the homepage

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,15 +7,29 @@
         <div class="card-panel">
             <h3>About</h3>
             <p>
-                This is a beta tool to assist me in researching companies, particularly when I'm in 
-                the late stages of the interview process. It isn't polished yet but I'm packaging it up
-                on the web to share and demo more easily.
-            </p>
-            <p>
+                This is a beta tool to assist job seekers in researching companies, particularly in 
+                the late stages of the interview process.
                 The data is sourced from a variety of places, including Glassdoor, news sources, Reddit, app stores, and the company's own website.
             </p>
             <p>
-                It works best for medium-sized tech companies right now, though I'm working on expanding the coverage to different company sizes and different industries.
+                <table style="width:100%;">
+                    <tr>
+                        <td style="vertical-align: top;">
+                            <h4>😊 Good for:</h4>
+                            <ul>
+                                <li>Medium-sized companies (50-1000 employees)</li>
+                                <li>Companies that make mobile apps or Steam games</li>
+                            </ul>
+                        </td>
+                        <td style="vertical-align: top;">
+                            <h4>☹️ Bad for:</h4>
+                            <ul>
+                                <li>Small startups with minimal presence on the web</li>
+                                <li>Large companies with a wide range of products and teams</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </p>
         </div>
     </div>
